--- a/murillo.html
+++ b/murillo.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>futebol</h1>
+    <p><strong>futebol</strong> é um esporte famoso, você usa uma bola de futebol e usa os pés para chutar e fazer passes etc. voce tem varios tipo de dribles, cada jogador joga por um time diferente
+    <p> voce tem varios tipo de dribles, cada jogador joga por um time diferente e existem diversos campeonatos.
+    <p>premios igual, bola de ouro, champions league, copa do mundo etc </p>
+    <img src="download.jpeg"
 </body>
 </html>
