--- a/murillo-1.html
+++ b/murillo-1.html
@@ -8,12 +8,12 @@
 </head>
 <body>
  <h1>futebol</h1> 
-  <p>
+  <p class="neymar">
     <strong>futebol</strong> origem, regras, no Brasil, na história - Mundo Educação
     O futebol moderno surgiu na Inglaterra durante o século XIX, mas relatos históricos apontam que já existiam práticas esportivas parecidas.</p>
     <p>Atualmente, grandes competições de futebol são organizadas todos os anos por diferentes entidades futebolísticas (nacionais, continentais ou internacionais).
     <h2>times de futebol</h2>
-    </p>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
+    </p class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
 <img src="bola" alt="">
 </body>
 </html>
