--- a/murillo-1.html
+++ b/murillo-1.html
@@ -15,5 +15,14 @@
     <h2>times de futebol</h2>
     </p class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
 <img src="bola" alt="">
+    <ul>
+        <h3> lista das principais competiçoẽs</h3>
+        <li>champions legaue</li>
+        <li>copa do mundo</li>
+          <li>bola de ouro</li>
+        <li>premier league</li>
+    <li>laliga/li>
+    <li>libertadores etc</li>
+    </ul>
 </body>
 </html>
