--- a/murillo.html
+++ b/murillo.html
@@ -11,9 +11,9 @@
   <p class="neymar">
     <strong>futebol</strong> origem, regras, no Brasil, na história - Mundo Educação
     O futebol moderno surgiu na Inglaterra durante o século XIX, mas relatos históricos apontam que já existiam práticas esportivas parecidas.</p>
-    <p>Atualmente, grandes competições de futebol são organizadas todos os anos por diferentes entidades futebolísticas (nacionais, continentais ou internacionais).
+    <p>Atualmente, grandes competições de futebol são organizadas todos os anos por diferentes entidades futebolísticas (nacionais, continentais ou internacionais).</p>
     <h2>times de futebol</h2>
-    </p class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
+    <p> class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.</p>
 <img src="bola" alt="">
     <ul>
         <h3> lista das principais competiçoẽs</h3>
