--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <strong>futebol</strong> origem, regras, no Brasil, na história - Mundo Educação
     O futebol moderno surgiu na Inglaterra durante o século XIX, mas relatos históricos apontam que já existiam práticas esportivas parecidas.</p>
     <p>Atualmente, grandes competições de futebol são organizadas todos os anos por diferentes entidades futebolísticas (nacionais, continentais ou internacionais).
+    <p>O futebol é um esporte cujo campo de grama apresenta 105 metros de comprimento por 68 metros de largura, uma padronização da FIFA. Duas equipes compostas por 11 jogadores disputam uma partida em que o objetivo é marcar o máximo possível de gols.</p>
+    <p> futebol é um esporte coletivo que não tem uma origem bem definida, uma vez que diversos jogos de bola semelhantes a ele já eram praticados por povos da Antiguidade</p>
     <h2>times de futebol</h2>
     </p class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
 <img src="bola" alt="">
