--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p> futebol é um esporte coletivo que não tem uma origem bem definida, uma vez que diversos jogos de bola semelhantes a ele já eram praticados por povos da Antiguidade</p>
     <h2>times de futebol</h2>
     </p class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
-<img src="bola" alt="">
+<img class="murillo" src="bola" alt="">
     <ul>
         <h3> lista das principais competiçoẽs</h3>
         <li>champions legaue</li>
