--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>O futebol é um esporte cujo campo de grama apresenta 105 metros de comprimento por 68 metros de largura, uma padronização da FIFA. Duas equipes compostas por 11 jogadores disputam uma partida em que o objetivo é marcar o máximo possível de gols.</p>
     <p> futebol é um esporte coletivo que não tem uma origem bem definida, uma vez que diversos jogos de bola semelhantes a ele já eram praticados por povos da Antiguidade</p>
     <h2>times de futebol</h2>
-    </p class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
+    </p class="athletico">existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.
 <img class="murillo" src="bola" alt="">
     <ul>
         <h3> lista das principais competiçoẽs</h3>
