--- a/murillo.html
+++ b/murillo.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="murillo.css">
 </head>
 <body>
- <h1>futebol</h1> 
-  <p class="neymar">
-    <strong>futebol</strong> origem, regras, no Brasil, na história - Mundo Educação
-    O futebol moderno surgiu na Inglaterra durante o século XIX, mas relatos históricos apontam que já existiam práticas esportivas parecidas.</p>
-    <p>Atualmente, grandes competições de futebol são organizadas todos os anos por diferentes entidades futebolísticas (nacionais, continentais ou internacionais).</p>
-    <h2>times de futebol</h2>
-    <p> class=athletico>existem vario como: athletico pr, coritiba, flamengo, corinthians, etc.</p>
-<img src="bola" alt="">
-    <ul>
-        <h3> lista das principais competiçoẽs</h3>
-        <li>champions legaue</li>
-        <li>copa do mundo</li>
-          <li>bola de ouro</li>
-        <li>premier league</li>
-    <li>laliga/li>
-    <li>libertadores etc</li>
-    </ul>
+ <h1>jogadores</h1>
+<p>Neymar iniciou sua carreira nas categorias de base da Portuguesa Santista em 1998, sendo transferido para o Santos em 2003. Após seis anos, foi promovido ao time principal. </p>
+<p>No ano em que fez a sua estreia com a equipe profissional, Neymar foi considerado a maior revelação do Campeonato Paulista</p>
 </body>
 </html>
